# TMGenius-llm

./: .env  .gitignore  download_images.sh  install_all.sh  load_images.sh  pyproject.toml  requirements.txt  test_llm.sh
SenseVoice/: aclruntime-0.0.2-cp311-cp311-linux_aarch64.whl  ais_bench-0.0.2-py3-none-any.whl  main.py
SenseVoice/src/: api_services.py  demo.py  export_onnx.py  infer_gpu.py  infer_gpu_api.py  infer_onnx.py  modify_onnx.py  test_api.py
config/: tmgenius-agent_300i-duo.json
docker/: docker-compose-300i-duo.yaml
docker/images/: readme.md
docker/weights/: readme.md
